Fixed styles for FF scrollbar.

--- a/public_html/src/css/editor.css
+++ b/public_html/src/css/editor.css
@@ -224,6 +224,9 @@ textarea {
 	overflow: auto;
 	scrollbar-width: thin;
 }
+.ldt {
+	scrollbar-width: thin;
+}
 .result-src {
 	white-space: pre-wrap;
 }
